2024-05-06 - jdk17 > jdk11 - marshalling / unmarshalling (junit) - IHE Representation Implement

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,13 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor('org.projectlombok:lombok:1.18.24')
+
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
+    implementation 'org.glassfish.jaxb:jaxb-core:4.0.0'
+    implementation 'com.sun.xml.bind:jaxb-impl:4.0.0'
+
 }
 
 test {
